--- a/src/app/_components/Footer/FooterComponent/index.module.scss
+++ b/src/app/_components/Footer/FooterComponent/index.module.scss
@@ -14,6 +14,7 @@
 .inclusions {
   display: grid;
   justify-content: center;
+  text-align:center;
   gap: 30px;
   padding: 0;
   grid-template-columns: repeat(4, 1fr);
@@ -32,8 +33,15 @@
   }
 }
 
+.box{
+ background-color: var(--color-dark-50);
+ padding:20px;
+ border-radius:10px
+}
+
 .icon {
   margin-bottom: 16px;
+  margin:auto;
 }
 
 
