--- a/src/app/_components/Footer/FooterComponent/index.module.scss
+++ b/src/app/_components/Footer/FooterComponent/index.module.scss
@@ -1,12 +1,19 @@
 @use '../../../_css/queries.scss' as *;
 
+
 .footer {
   padding: 30px 0;
   background-color: var(--theme-elevation-1000);
   color: var(--theme-elevation-0);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  
 
   @include small-break {
     padding: calc(var(--base) * 2) 0;
+    flex-direction: column;
   }
 }
 
@@ -91,4 +98,13 @@
 
 .hide {
   display: none;
+}
+
+.copyright {
+  color: white;
+}
+.payment {
+  background-color: white;
+  padding: 2px;
+  border-radius: 10px;
 }
