--- a/src/app/(pages)/checkout/CheckoutPage/index.module.scss
+++ b/src/app/(pages)/checkout/CheckoutPage/index.module.scss
@@ -30,16 +30,19 @@
   justify-content: flex-end;
   align-items: center;
 }
-
-.orderTotal {
+.billing {
   margin-top: var(--base);
-  font-weight: 600;
-  text-align: end;
-  display: flex;
-  justify-content: space-between;
   padding: 24px;
   margin-bottom: 60px;
   background-color: var(--color-dark-50);
+}
+.orderTotal {
+  text-align: end;
+  display: flex;
+  justify-content: space-between;
+}
+.grandTotal {
+  font-weight: 600;
 }
 
 .payment {
@@ -61,4 +64,7 @@
   @include small-break {
     display: block;
   }
+}
+.deliveryOption{
+  margin-top: 10px;
 }
