--- a/src/app/(pages)/[slug]/HomeProducts/index.module.scss
+++ b/src/app/(pages)/[slug]/HomeProducts/index.module.scss
@@ -1,3 +1,5 @@
+@import '../../../_css//queries.scss';
+
 .products {
     display: grid;
     grid-template-columns: repeat(3, minmax(30%, 1fr));
@@ -6,6 +8,14 @@
     padding: 0;
     width: 100%;
     margin-top: 40px;
+
+    @include extra-small-break {
+      grid-template-columns: 100%;
+    }
+    @include small-break {
+      grid-template-columns: 100%;
+    }
+
 }
 .titleWrapper {
   display: flex;
