--- a/src/app/_components/Footer/FooterComponent/index.module.scss
+++ b/src/app/_components/Footer/FooterComponent/index.module.scss
@@ -85,11 +85,17 @@
 .socialLinks {
   display: flex;
   gap: 20px;
+  margin-top: 10px;
+  justify-content: start;
+  @include small-break {
+    align-items: center;
+    justify-content: center;
+  }
 }
 
-.socialLinkItem {
-  width: 100%;
-}
+// .socialLinkItem {
+//   width: 100%;
+// }
 
 .socialIcon {
   width: 24px;
