--- a/src/app/_heros/CustomHero/index.module.scss
+++ b/src/app/_heros/CustomHero/index.module.scss
@@ -87,3 +87,11 @@
     margin: calc(var(--base) / 2);
   }
 }
+.richText{
+  @include small-break {
+    background-color: #ffffff61;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 2px 20px -15px;
+  }
+}
