made some modification on productview page

--- a/src/app/(pages)/checkout/CheckoutPage/index.module.scss
+++ b/src/app/(pages)/checkout/CheckoutPage/index.module.scss
@@ -35,6 +35,7 @@
   padding: 24px;
   margin-bottom: 60px;
   background-color: var(--color-dark-50);
+  border-radius: 10px;
 }
 .orderTotal {
   text-align: end;
