--- a/src/app/_components/Input/index.module.scss
+++ b/src/app/_components/Input/index.module.scss
@@ -17,6 +17,7 @@
   line-height: calc(var(--base) * 2);
   padding: 0 calc(var(--base) / 2);
   font-size: inherit;
+  border-radius: 10px;
 
   &:focus {
     border: none;
