--- a/src/app/_components/Card/index.module.scss
+++ b/src/app/_components/Card/index.module.scss
@@ -102,3 +102,13 @@
     align-items: flex-start;
   }
 }
+.loading{
+  background-color: gray;
+  position:absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width:100%;
+  color:white;
+  z-index: 2;
+}
