--- a/src/app/_components/Footer/FooterComponent/index.module.scss
+++ b/src/app/_components/Footer/FooterComponent/index.module.scss
@@ -86,7 +86,7 @@
   display: flex;
   gap: 20px;
   margin-top: 10px;
-  justify-content: start;
+  justify-content: flex-start;
   @include small-break {
     align-items: center;
     justify-content: center;
