--- a/src/app/(pages)/cart/CartPage/index.module.scss
+++ b/src/app/(pages)/cart/CartPage/index.module.scss
@@ -53,3 +53,10 @@
   padding-bottom: 16px;
   border-bottom: 1px solid var(--color-dark-50);
 }
+.billing {
+  margin-top: var(--base);
+  padding: 24px;
+  margin-bottom: 60px;
+  background-color: var(--color-dark-50);
+  border-radius: 10px;
+}
