--- a/src/app/_components/Categories/CategoryCard/index.module.scss
+++ b/src/app/_components/Categories/CategoryCard/index.module.scss
@@ -10,6 +10,7 @@
   justify-content: center;
   padding: 20px;
   cursor: pointer;
+  border-radius: 10px;
 
   background-size: cover;
   background-position: center;
