--- a/src/app/_heros/Product/index.module.scss
+++ b/src/app/_heros/Product/index.module.scss
@@ -49,6 +49,11 @@
   color: var(--color-green-500);
 }
 
+.stockOut {
+  color: red;
+  font-style: italic;
+}
+
 .separator {
   color: var(--color-gray-500);
   padding: 0 10px;
